--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
                     <div class="form_table">
                         <h2>Phản hồi</h2>
                         <label for="name">Họ và tên:</label><br>
-                        <input type="text" id="name" name="name" placeholder="Nhập họ tên" required
+                        <input type="text" id="name" placeholder="Nhập họ tên" required
                             oninvalid="this.setCustomValidity('Vui lòng nhập họ tên!')" 
                             oninput="this.setCustomValidity('')"><br><br>
                         <label for="email">Email:</label><br>
