--- a/cart.html
+++ b/cart.html
@@ -5,10 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Giỏ hàng</title>
         <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
-        <link rel="stylesheet" href="./css/style.css">
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
-        <script src="./js/scripts.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+        <link rel="stylesheet" href="css/style.css">
+        <script src="js/scripts.js"></script>
+        
     </head>
 <body onload="show_cart()">
     <header id="header">
