--- a/login.html
+++ b/login.html
@@ -6,9 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Đăng nhập</title>
     <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+    <link rel="stylesheet" type="text/css"
+        href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css" />
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body class="body">
@@ -16,9 +20,9 @@
         <div class="container">
             <div class="logo">
                 <a href="index.html">
-                    <img class="logo-icon" src="./images/logo.png" alt="" width="50px" height="50px">
+                    <img class="logo-icon" src="images/logo.png" alt="" width="50px" height="50px">
                 </a>
-                <img class="menu-icon" src="/images/menu.png" alt="" class="menu-icon" onclick="toggleMenu()">
+                <img class="menu-icon" src="images/menu.png" alt="" class="menu-icon" onclick="toggleMenu()">
             </div>
             <nav class="navbar">
                 <ul>
