--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
-<body class="body">
+<body>
     <header id="header">
         <div class="container">
             <div class="logo">
